--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/styles-welcome.css">
+  <link rel="stylesheet" href="css/styles-welcome.css?v=1.1">
 </head>
 <body>
   <div class="background">
